Make a group animation dirty when a member changed

Some properties of one of the member animations in a group
animation can be changed after the group animation initialized.
1. If the group animation is already proceeding, they will
affect the next loop.
2. If the group animation started but does not proceed, they
will affect the current loop

Fixes: QTBUG-110589
Fixes: QTBUG-61282
Fixes: QTBUG-95840
Pick-to: 6.6 6.5
Change-Id: I018105bdd75dd5bd7c24e9126853cd79c8f0123b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>